--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
     <string name="next_button">Next</string>
     <string name="prev_button">Prev</string>
     <string name="reset_button">Reset</string>
-    <string name="answer_percent">0</string>
+    <string name="answer_percent"></string>
 </resources>
